tests/integration/nodejs/omit-stacktrace/syntax-error/index.js
// Copyright 2016, Pulumi Corporation.  All rights reserved.

// This program should fail with a SyntaxError
var var
